# mccp

./: AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md  apis.md  compose.yml
.mccp/: project.toml
crates/mccp-cli/: Cargo.toml
crates/mccp-cli/src/: commands.rs  config.rs  main.rs  utils.rs
crates/mccp-core/: Cargo.toml
crates/mccp-core/src/: chunk.rs  config.rs  error.rs  file.rs  graph.rs  lib.rs  project.rs  project_manifest.rs  query.rs  schema.rs  symbol.rs
crates/mccp-indexer/: Cargo.toml
crates/mccp-indexer/src/: chunker.rs  code_intel.rs  code_intel.rs.bak  cycle_detector.rs  graph_builder.rs  lib.rs  merkle.rs  parser.rs  pipeline.rs  summarizer.rs
crates/mccp-providers/: Cargo.toml
crates/mccp-providers/src/: bm25.rs  config.rs  cost_tracker.rs  lib.rs  ollama_provider.rs  provider_manager.rs  providers.rs  qdrant_provider.rs
crates/mccp-server/: Cargo.toml
crates/mccp-server/src/: lib.rs  main.rs  resources.rs  server.rs  tools.rs
crates/mccp-storage/: Cargo.toml
crates/mccp-storage/src/: cache.rs  lib.rs  persistence.rs  storage.rs
default_value/.mccp/: project.toml
src/: cli.rs  command_input.rs  config.rs  daemon.rs  embeddings.rs  indexer.rs  interactive.rs  main.rs  system_config.rs  vector_store.rs
todo/: .gitignore  v2.md  v3.md  v4.md  v4_progress.md
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: admin.ts  http.ts  mccp.ts  runtimeConfig.ts
web/src/components/: SidebarNav.tsx  TopBar.tsx
web/src/pages/: ConfigPage.tsx  DashboardPage.tsx  LogsPage.tsx  ProjectsPage.tsx  TasksPage.tsx
web/src/ws/: MccpWsProvider.tsx  types.ts
