[workspace]
resolver = "2"
members = [
    "crates/mccp-cli",
    "crates/mccp-core",
    "crates/mccp-indexer",
    "crates/mccp-storage",
    "crates/mccp-providers",
]

[package]
name = "mccp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Local-first MCP server for code intelligence"
license = "MIT"

[[bin]]
name = "mccp"
path = "src/main.rs"

[dependencies]
# Core async and concurrency
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
rayon = "1.8"
crossbeam = "0.8"
smallvec = "1.11"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

# File system and watching
notify = { version = "6.0" }
walkdir = "2.5"
glob = "0.3"
ignore = "0.4"

# HTTP and networking
reqwest = { version = "0.12", features = ["json"] }
hyper = "1.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }

# Storage and databases
sled = "0.34"
rocksdb = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }

# Vector storage
qdrant-client = { version = "0.1", optional = true }
pgvector = { version = "0.4", optional = true }
weaviate-client = { version = "0.1", optional = true }

# LLM and embedding providers
ollama-rs = { version = "0.1", optional = true }
openai = { version = "1.0", optional = true }
anthropic = { version = "0.0.8", optional = true }

# Code parsing
tree-sitter = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-php = "0.21"
tree-sitter-kotlin = "0.3"

# Text processing and embeddings
tokenizers = "0.22"
regex = "1.10"
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.13"

# Docker and system management
bollard = "0.17"
sysinfo = "0.30"

# Platform-specific
libc = "0.2"
windows = { version = "0.58", optional = true }

# TUI
crossterm = "0.28"
ratatui = "0.28"

# Interactive prompts
inquire = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.12"
proptest = "1.4"

[features]
default = ["qdrant", "ollama"]
integration = ["qdrant", "ollama"]
e2e = ["integration"]

# Provider features
qdrant = ["dep:qdrant-client"]
ollama = ["dep:ollama-rs"]
openai = ["dep:openai"]
anthropic = ["dep:anthropic"]
pgvector = ["dep:pgvector"]
weaviate = ["dep:weaviate-client"]

# Platform features
windows-service = ["dep:windows"]