[package]
name = "mccp-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "CLI interface for mccp"

[dependencies]
mccp-core = { path = "../mccp-core" }
mccp-server = { path = "../mccp-server" }
mccp-indexer = { path = "../mccp-indexer" }
mccp-storage = { path = "../mccp-storage" }
mccp-providers = { path = "../mccp-providers" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"