[package]
name = "mccp-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core types and interfaces for mccp"

[dependencies]
# Core async and concurrency
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
path = "0.1"
walkdir = "2.5"

# Text processing
regex = "1.10"
sha2 = "0.10"
chrono = "0.4"
glob = "0.3"
