[package]
name = "mccp-providers"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Provider abstraction layer for mccp"

[dependencies]
mccp-core = { path = "../mccp-core" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
