[package]
name = "mccp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for mccp"

[dependencies]
mccp-core = { path = "../mccp-core" }
mccp-indexer = { path = "../mccp-indexer" }
mccp-storage = { path = "../mccp-storage" }
mccp-providers = { path = "../mccp-providers" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }