[package]
name = "mccp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for mccp"

[[bin]]
name = "mccp-server"
path = "src/main.rs"

[dependencies]
mccp-core = { path = "../mccp-core" }
mccp-indexer = { path = "../mccp-indexer" }
mccp-storage = { path = "../mccp-storage" }
mccp-providers = { path = "../mccp-providers" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["macros", "ws"] }
axum-test = "16"
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
diffy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
